# CmakeGtestProject

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/mylib/: lib.cpp  lib.hpp
test/: CMakeLists.txt  test.cpp
